--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,3 +56,23 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.bubble {
+  position: relative;
+  background: white;
+  border-radius: 0.4em;
+}
+
+.bubble:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 8px solid transparent;
+  border-top-color: white;
+  border-bottom: 0;
+  margin-left: -8px;
+  margin-bottom: -8px;
+}
