--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: Pretendard;
   font-weight: 400;
   src:
@@ -27,11 +27,11 @@
     local('Pretendard Bold'),
     url('/assets/fonts/Pretendard/woff2/Pretendard-Bold.woff2') format('woff2'),
     url('/assets/fonts/Pretendard/woff/Pretendard-Bold.woff') format('woff');
-}
+} */
 
 @layer base {
   html {
-    font-family: Pretendard, 'system-ui', sans-serif;
+    /* font-family: Pretendard, 'system-ui', sans-serif; */
   }
 
   body {
