--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,3 +45,11 @@
   margin-left: -8px;
   margin-bottom: -8px;
 }
+
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+}
